Quorum3/Library/Tests/Actions/Pass/MultipleClassNestedCallsAndReturns.quorum
class Main
    action Main
        i = 1
        repeat 4 times
            x = foo(i)
            output x
            i = i + 1
        end
    end

    action foo (integer a) returns integer
        if a = 1
            if even(a)
                a = bar(a)
                return a
            else
                a = 2 * bar(a)
            end
        elseif a = 2
            if even(a)
                a = 2 + bar(a)
                return a
            else
                a = 4 * bar(a)
            end
        else
            if even(a)
                a = 10 * bar(a) + 1
            else
                a = 20 * bar(a)
            end
        end
        if even(a)
            return a / 2
        end
        return a
    end

    action bar(integer t) returns integer
        if even(t)
            return 10 + t
        else
            return 10 * t
        end
        return t
    end

    action even(integer a) returns boolean
        if a mod 2 = 0
            return true
        else
            return false
        end
    end
end