Quorum3/Library/Tests/Actions/Fail/MissingReturn4.quorum
class Main
    action Main
        i = 1
        repeat 5 times
            output foo(i)
            i = i + 1
        end
    end

    action foo (integer a) returns text
        if a = 1
            if even(a)
                return "Even"
            else
                if even(bar(a)) 
                    return "Even"
                end
                return "Odd"
            end
        elseif a = 2
            return even(bar(a))
        elseif a = 3
            return even(bar(bar(a)))
        else
            if bar(bar(a)) >= 4
                return "StackOverflow"
            end
        end
    end

    action bar(integer t) returns integer
        if t = 1
            return 10 + t
        elseif t = 2
            return 2
        elseif t = 3
            return t * 10
        end
        return t
    end

    action even(integer a) returns boolean
        if a mod 2 = 0
            return true
        else
            return false
        end
    end
end